--- a/Investing.html
+++ b/Investing.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mind Corp Investing</title>
+	<meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <title>Mine Corp Investing</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+     <link rel="stylesheet" href="./css/layout.css"  />
+    <link rel="stylesheet" href="./css/style.css"  />
 </head>
 <body>
 <div>
