--- a/consulting.html
+++ b/consulting.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mind Corp Consulting</title>
+	<meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+     <link rel="stylesheet" href="./css/layout.css"  />
+	<link rel="stylesheet" href="./css/style.css"  />
+	<link href="https://fonts.googleapis.com/css?family=Rakkas" rel="stylesheet" />
 </head>
+
 <body>
-<div>
-	<h1>Mind Corp Consulting</h1>
-	<p>Expense Reduction Business Saving Plan</p>
-</div>
-<div>
+
+<head>
+	<header class="header">
+		<span class="title">
+		<img src="./img/logo.png"  class="logo"/>
+		<h1><div class="trans-letters">Mind Corp</div> Consulting</h1>
+		</span>
+		<span class="flex-2">
+	<input class="menu-btn" type="checkbox" id="menu-btn" />
+	<label class="menu-icon" for="menu-btn">
+	<span class="nav-icon"></span></label>
+		<ul class="menu">
+			<li><a href="#">Consulting</a></li>
+			<li><a href="#">Contact Mind Corp</a></li>
+		</ul>
+	</span>
+	</header>
+</head>
+
+<main class="container">
+
+	<span class="flex-item-4">
+		<h1>Mind Corp Consulting</h1>
+		<h2>Expense Reduction Business Saving Plan</h2>
+	</span>
+
+	<article class="grid-item-1">
+	<span class="content-container">
 	<h1>Who We Are</h1>
-	<p>Mind Corp Consulting is your trusted advisor and leader in service solutions <br> to organizations across the globe. We are dedicated and equipped to finding <br> the best solution for your business.</p>
-	<p>We will physically join forces with your team to help you analyze existing <br> supplier solutions, contracts and invoices, and provide a comparison of <br> contracted rates to current market rates.
+	<p>Mind Corp Consulting is your trusted advisor and leader in service solutions to organizations across the globe. We are dedicated and equipped to finding the best solution for your business.</p>
+	<h1>How We Work</h1>
+	<p>We will physically join forces with your team to help you analyze existing supplier solutions, contracts and invoices, and provide a comparison of contracted rates to current market rates.
 	</p>
-	<p>MCC Managed Service Plans offer a full-service solution that provides <br> expert staff resources to manage sourcing, bid process, contract evaluation, <br> and monthly expense analysis. We leverage technology to help modernize <br> your business and pay your invoices with confidence.</p>
+	</span>
+
+	<span class="content-container">
+	<h1>What We Offer</h1>
+	<p>MCC Managed Service Plans offer a full-service solution that provides expert staff resources to manage sourcing, bid process, contract evaluation, and monthly expense analysis. We leverage technology to help modernize your business and pay your invoices with confidence.</p>
 	<ul>
 		<li>Process, system, or technological improvements.</li>
 		<li>Correction of billing errors</li>
@@ -22,12 +57,19 @@
 		<li>Consulting plan</li>
 		<li>Cost and profitability analyses.</li>
 	</ul>
-</div>
-<div>
+	</span>
+	</article>
+
+
+<div class="grid-item-1">
+
+<span class="content-container"> 
 	<h1>How It Works</h1>
 	<p>Mind Corp Consulting reviews all your expenses and finds real savings. <br> We can help find expense saving that can add up to thousands of dollars a year...</p>
-	<h3>IF WE DON'T FIND YOU SAVINGS</h3>
-	<h3>WE DON'T GET PAID!!!</h3>
+	<h3>IF WE DON'T FIND YOU SAVINGS<br>WE DON'T GET PAID!!!</h3>
+</span>
+	<div class="content-container">
+		<h3> Where We Can Find Savings</h3>
 	<ul>
 		<li>Utilities</li>
 		<li>Contract and lease review</li>
@@ -35,12 +77,16 @@
 		<li>Complete expense review</li>
 		<li>Define expected cost comparison</li>
 	</ul>
+	</div>
 </div>
-<div>
+
+<aside class="mission">
 	<h2>Mission Statement</h2>
 	<p>Mind Corp is dedicated to helping <br> businesses reduce their expenses and <br> increase the profit to their bottom line.</p>
-</div>
-<div>
+</aside>
+
+
+<section class="flex-item-4">
 	<h1>Products:</h1>
 	<ul>
 		<li>Mind Corp Expense Saving Plan</li>
@@ -49,7 +95,16 @@
 		<li>Mind Corp Real Estate</li>
 		<li>Mind Corp Lending</li>
 	</ul>
-</div>
+</section>
+
+</main>
+<footer class="footer">
+	<h2>Handcrest&copy;</h2>
+	<a href="#">Contact Us</a>
+	<a href="#">Contact Us</a>
+	<a href="#">Contact Us</a>
+</footer>
+
 
 </body>
 </html>
