hero header works

--- a/consulting.html
+++ b/consulting.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-     <link rel="stylesheet" href="./css/layout.css"  />
-	<link rel="stylesheet" href="./css/style.css"  />
-	<link href="https://fonts.googleapis.com/css?family=Rakkas" rel="stylesheet" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<link rel="stylesheet" href="./css/layout-2.css" />
+	<link rel="stylesheet" href="./css/style.css" />
+	<link rel="stylesheet" href="./css/layout.css" />
+	<link rel="stylesheet" href="./css/header.css" />
+
 </head>
 
 <body>
+	<header>
+		<div class="overlay">
+					<h1>Mind Corp Consulting</h1>
+					<h2>Expense Reduction Business Saving Plan</h2>
+					<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti quaerat fugit illum consequatur id labore quia, distinctio
+						nobis adipisci, repellendus illo excepturi sunt neque, consequuntur maxime sit amet doloribus ratione.</p>
+					<br>
+					<button>Find Out More</button>
+				</div>
+	</header>
 
-<head>
+	<nav class="nav">
+		<ol>
+			<li>Contact Us</li>
+			<li>Contact Us</li>
+			<li>Contact Us</li>
+			<li>Contact Us</li>
+		</ol>
+	</nav>
+	<main class="body-container">
+		<!--</header>
 	<header class="header">
 		<span class="title">
 		<img src="./img/logo.png"  class="logo"/>
-		<h1><div class="trans-letters">Mind Corp</div> Consulting</h1>
+		<h1>Mind Corp Consulting</h1>
 		</span>
 		<span class="flex-2">
 	<input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -27,84 +50,96 @@
 			<li><a href="#">Contact Mind Corp</a></li>
 		</ul>
 	</span>
-	</header>
-</head>
+	</header> -->
 
-<main class="container">
+		
+				<div class="container">
 
-	<span class="flex-item-4">
-		<h1>Mind Corp Consulting</h1>
-		<h2>Expense Reduction Business Saving Plan</h2>
-	</span>
+					<span class="flex-item-4">
+						<h1>Mind Corp Consulting</h1>
+						<h2>Expense Reduction Business Saving Plan</h2>
+					</span>
 
-	<article class="grid-item-1">
-	<span class="content-container">
-	<h1>Who We Are</h1>
-	<p>Mind Corp Consulting is your trusted advisor and leader in service solutions to organizations across the globe. We are dedicated and equipped to finding the best solution for your business.</p>
-	<h1>How We Work</h1>
-	<p>We will physically join forces with your team to help you analyze existing supplier solutions, contracts and invoices, and provide a comparison of contracted rates to current market rates.
-	</p>
-	</span>
+					<article class="grid-item-1">
+						<span class="content-container">
+							<h1>Who We Are</h1>
+							<p>Mind Corp Consulting is your trusted advisor and leader in service solutions to organizations across the globe. We
+								are dedicated and equipped to finding the best solution for your business.</p>
+							<h1>How We Work</h1>
+							<p>We will physically join forces with your team to help you analyze existing supplier solutions, contracts and invoices,
+								and provide a comparison of contracted rates to current market rates.
+							</p>
+						</span>
 
-	<span class="content-container">
-	<h1>What We Offer</h1>
-	<p>MCC Managed Service Plans offer a full-service solution that provides expert staff resources to manage sourcing, bid process, contract evaluation, and monthly expense analysis. We leverage technology to help modernize your business and pay your invoices with confidence.</p>
-	<ul>
-		<li>Process, system, or technological improvements.</li>
-		<li>Correction of billing errors</li>
-		<li>Analyze operation expenses</li>
-		<li>Rate deductions</li>
-		<li>Consulting plan</li>
-		<li>Cost and profitability analyses.</li>
-	</ul>
-	</span>
-	</article>
-
-
-<div class="grid-item-1">
-
-<span class="content-container"> 
-	<h1>How It Works</h1>
-	<p>Mind Corp Consulting reviews all your expenses and finds real savings. <br> We can help find expense saving that can add up to thousands of dollars a year...</p>
-	<h3>IF WE DON'T FIND YOU SAVINGS<br>WE DON'T GET PAID!!!</h3>
-</span>
-	<div class="content-container">
-		<h3> Where We Can Find Savings</h3>
-	<ul>
-		<li>Utilities</li>
-		<li>Contract and lease review</li>
-		<li>Payroll - Workers comp and employee duplication review</li>
-		<li>Complete expense review</li>
-		<li>Define expected cost comparison</li>
-	</ul>
-	</div>
-</div>
-
-<aside class="mission">
-	<h2>Mission Statement</h2>
-	<p>Mind Corp is dedicated to helping <br> businesses reduce their expenses and <br> increase the profit to their bottom line.</p>
-</aside>
+						<span class="content-container">
+							<h1>What We Offer</h1>
+							<p>MCC Managed Service Plans offer a full-service solution that provides expert staff resources to manage sourcing, bid
+								process, contract evaluation, and monthly expense analysis. We leverage technology to help modernize your business
+								and pay your invoices with confidence.</p>
+							<ul>
+								<li>Process, system, or technological improvements.</li>
+								<li>Correction of billing errors</li>
+								<li>Analyze operation expenses</li>
+								<li>Rate deductions</li>
+								<li>Consulting plan</li>
+								<li>Cost and profitability analyses.</li>
+							</ul>
+						</span>
+					</article>
 
 
-<section class="flex-item-4">
-	<h1>Products:</h1>
-	<ul>
-		<li>Mind Corp Expense Saving Plan</li>
-		<li>Mind Corp Consulting Membership</li>
-		<li>Mind Corp Marketing</li>
-		<li>Mind Corp Real Estate</li>
-		<li>Mind Corp Lending</li>
-	</ul>
-</section>
+					<div class="grid-item-1">
 
-</main>
-<footer class="footer">
-	<h2>Handcrest&copy;</h2>
-	<a href="#">Contact Us</a>
-	<a href="#">Contact Us</a>
-	<a href="#">Contact Us</a>
-</footer>
+						<span class="content-container">
+							<h1>How It Works</h1>
+							<p>Mind Corp Consulting reviews all your expenses and finds real savings.
+								<br> We can help find expense saving that can add up to thousands of dollars a year...</p>
+							<h3>IF WE DON'T FIND YOU SAVINGS
+								<br>WE DON'T GET PAID!!!</h3>
+						</span>
+						<div class="content-container">
+							<h3> Where We Can Find Savings</h3>
+							<ul>
+								<li>Utilities</li>
+								<li>Contract and lease review</li>
+								<li>Payroll - Workers comp and employee duplication review</li>
+								<li>Complete expense review</li>
+								<li>Define expected cost comparison</li>
+							</ul>
+						</div>
+					</div>
+
+					<aside class="mission">
+						<h2>Mission Statement</h2>
+						<p>Mind Corp is dedicated to helping
+							<br> businesses reduce their expenses and
+							<br> increase the profit to their bottom line.</p>
+					</aside>
+
+
+					<section class="flex-item-4">
+						<h1>Products:</h1>
+						<ul>
+							<li>Mind Corp Expense Saving Plan</li>
+							<li>Mind Corp Consulting Membership</li>
+							<li>Mind Corp Marketing</li>
+							<li>Mind Corp Real Estate</li>
+							<li>Mind Corp Lending</li>
+						</ul>
+					</section>
+
+					
+					<footer class="footer">
+						<h2>Handcrest&copy;</h2>
+						<a href="#">Contact Us</a>
+						<a href="#">Contact Us</a>
+						<a href="#">Contact Us</a>
+					</footer>
+				</div>
+			</main>
+
 
 
 </body>
+
 </html>
